[gd_scene load_steps=3 format=3 uid="uid://dsln0u30vj1sa"]

[ext_resource type="Theme" uid="uid://bewsyshgup2l6" path="res://default_theme.tres" id="1_qfegd"]
[ext_resource type="Script" path="res://ui/PauseMenu.gd" id="2_4brpd"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qfegd")
script = ExtResource("2_4brpd")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.54902)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Resume" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(95, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Quit")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Resume Game "

[node name="Quit" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
